--- a/less/style.less
+++ b/less/style.less
@@ -158,6 +158,7 @@
 #slider {
   position: relative;
   padding: 0 15px;
+  text-align: center;
   .slides {
     overflow: hidden;
   }
@@ -165,7 +166,8 @@
     position: relative;
     padding: 19px 5px 20px;
     width: 200px;
-    float: left;
+    //float: left;
+    display: inline-block;
     color: #fff;
     &.hide {
       display: none;
@@ -181,6 +183,7 @@
       padding: 7px 9px 6px;
       line-height: 1em;
       width: 182px;
+      text-align: left;
       #gradient > .vertical(rgba(255, 255, 255, 0.1), rgba(40,40,40, 0.1));
       background-color: #1e1e1e;
     }
@@ -193,6 +196,7 @@
       line-height: 1em;
       letter-spacing: 0.01em;
       width: 180px;
+      text-align: left;
       font-weight: bold;
       background-color: rgba(40,40,40, 0.8);
     }
@@ -248,8 +252,13 @@
   }
   #slider {
     .slide {
+      float: left;
+      display: block;
       p {
         background: #282828;
+      }
+      &.hide {
+        display: none;
       }
     }
   }
