--- a/css/style.css
+++ b/css/style.css
@@ -21,4 +21,4 @@
 .lt-ie9 #slider .slide.hide{display:none;}
 .lt-ie8 #content{overflow:hidden;}
 .lt-ie8 #slider,.lt-ie8 #toolbar{overflow:hidden;}
-@media (min-width:661px){#content{position:absolute;top:50%;left:50%;margin:-123px 0 0 -330px;width:660px;background:rgba(255, 255, 255, 0.9);-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;}}@media (max-width:660px){#content{position:absolute;top:50%;left:0;margin:-123px 0 0 0px;width:100%;min-width:197px;background:rgba(255, 255, 255, 0.9);-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;}}
+@media (min-width:661px){#content{position:absolute;top:50%;left:50%;margin:-123px 0 0 -330px;width:660px;background:rgba(255, 255, 255, 0.9);-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;}}@media (max-width:660px){#content{position:absolute;top:50%;left:0;margin:-123px 0 0 0px;width:100%;background:rgba(255, 255, 255, 0.9);-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;}}
