--- a/less/style.less
+++ b/less/style.less
@@ -2,7 +2,7 @@
 // --------------------------------------------------
 @font-face {
   font-family: Calibri;
-  src: url(../fonts/calibri.ttf);
+  src: local("Calibri"), url(../fonts/calibri.ttf) format("truetype");
   font-weight: 800;
 }
 
