--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@font-face{font-family:Calibri;src:url(../fonts/calibri.ttf);font-weight:800;}.background-contain{-webkit-background-size:cover;-o-background-size:cover;-moz-background-size:cover;background-size:cover;}
+@font-face{font-family:Calibri;src:local("Calibri"),url(../fonts/calibri.ttf) format("truetype");font-weight:800;}.background-contain{-webkit-background-size:cover;-o-background-size:cover;-moz-background-size:cover;background-size:cover;}
 .clearfix:after{content:'';display:block;clear:both;}
 #wrapper{width:100%;height:100%;min-height:auto;background:url(../images/bg.jpg) center center no-repeat;-webkit-background-size:cover;-o-background-size:cover;-moz-background-size:cover;background-size:cover;}
 #content{position:absolute;top:50%;left:50%;margin:-123px 0 0 -330px;width:660px;background:rgba(255, 255, 255, 0.9);-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;}
